Fix popup content

--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,7 @@
 <script type="module" src="popup.js"></script>
 
 <div class="container">
-  <div>
-    <div class="title">PersonaLearn Settings</div>
-    <p>Todo!</p>
-  </div>
+  <h3 class="title">PersonaLearn</h3>
+  <p class="hackmit">A HackMIT Project</p>
+  <button class="submit-data">Find Me Supplementary Materials</button>
 </div>
