--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <script type="module" src="popup.js"></script>
 
 <div class="container">
-  <h3 class="title">PersonaLearn</h3>
+  <img src="assets/logo-with-text.png" width="164" height="164" />
   <p class="hackmit">A HackMIT Project</p>
   <button class="submit-data">Find Me Supplementary Materials</button>
 </div>
