--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,9 @@
 <link href="popup.css" rel="stylesheet" type="text/css" />
+<script src="utils.js"></script>
 <script type="module" src="popup.js"></script>
 
 <div class="container">
-  <div>
-    <div class="title">Your bookmarks for this video</div>
-
-    <div class="bookmarks" id="bookmarks"></div>
-  </div>
+  <img src="assets/logo-with-text.png" width="164" height="164" />
+  <p class="hackmit">A HackMIT Project</p>
+  <button id="submit-data">Find Me Supplementary Materials</button>
 </div>
